--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
     <!-- HEADER -->
   <header>
-    <nav class="container navbar">
+      <!-- BARRA DI NAVIGAZIONE - HEADER -->
+    <nav class="container navbar flex-container">
       <div class="nav-logo">
         <img src="#" alt="logo">
       </div>
@@ -22,11 +23,16 @@
         <a href="#">Link</a>
         <a href="#">Link</a>
         <a href="#">Link</a>
+      </div>
+      <div class="nav-button">
+        <button>Login</button>
+      </div>
+    </nav>
+      <!-- IMMAGINE - HEADER -->
+    <div class="container-small header-figure flex-container">
+      <img src="#" alt="immagine header">
     </div>
-    <div class="nav-button">
-      <button>Login</button>
-    </div>
-  </nav>
+
   </header>
 
    <!-- MAIN -->
