--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- HEADER -->
   <header>
       <!-- BARRA DI NAVIGAZIONE - HEADER -->
-    <nav class="container navbar flex-container">
+    <nav class="flex-container container navbar">
       <div class="nav-logo">
         <img src="#" alt="logo">
       </div>
@@ -28,9 +28,12 @@
         <button>Login</button>
       </div>
     </nav>
-      <!-- IMMAGINE - HEADER -->
-    <div class="container-small header-figure flex-container">
-      <img src="#" alt="immagine header">
+      <!-- BOOTSTRAP - indica una sezione prominente
+        di una pagina web, spesso usata per attirare 
+        l'attenzione con un messaggio o un'immagine
+        di grande impatto -->
+    <div class="bootstrap container-flex-small">
+      <div class="bootstrap-content"></div>
     </div>
 
   </header>
