--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
   <header>
       <!-- BARRA DI NAVIGAZIONE - HEADER -->
     <nav class="flex-container container navbar">
-      <div class="nav-logo">
+      <div class="nav-logo border">
         <img src="#" alt="logo">
       </div>
-      <div class="nav-link">
+      <div class="nav-link border">
         <a href="#">Link</a>
         <a href="#">Link</a>
         <a href="#">Link</a>
         <a href="#">Link</a>
         <a href="#">Link</a>
       </div>
-      <div class="nav-button">
+      <div class="nav-button border">
         <button>Login</button>
       </div>
     </nav>
@@ -33,13 +33,28 @@
         l'attenzione con un messaggio o un'immagine
         di grande impatto -->
     <div class="bootstrap container-flex-small">
-      <div class="bootstrap-content"></div>
+      <div class="bootstrap-content border"></div>
     </div>
 
   </header>
 
    <!-- MAIN -->
   <main>
+    <section>
+        <div class="container flex-container odd-container">
+          <div class="azure-section border"></div>
+          <div class="pink-section border"></div>
+        </div>
+    </section>
+
+    <section>
+      <div class="container flex-container even-container">
+        <div class="azure-section border"></div>
+        <div class="pink-section border"></div>
+      </div>
+    </section>
+
+
   </main>
 
    <!-- FOOTER -->
