--- a/index.html
+++ b/index.html
@@ -40,19 +40,32 @@
 
    <!-- MAIN -->
   <main>
-    <section>
-        <div class="container flex-container odd-container">
-          <div class="azure-section border"></div>
-          <div class="pink-section border"></div>
-        </div>
-    </section>
+    <div>
+      <div class="container flex-container odd-container">
+        <div class="azure-section border"></div>
+        <div class="pink-section border"></div>
+      </div>
+    </div>
 
-    <section>
+    <div class="grey-container">
       <div class="container flex-container even-container">
         <div class="azure-section border"></div>
         <div class="pink-section border"></div>
       </div>
-    </section>
+    </div>
+
+    <div>
+      <div class="container flex-container odd-container">
+        <div class="azure-section border"></div>
+        <div class="pink-section border"></div>
+      </div>
+    </div>
+
+    <div class="grey-container">
+      <div class="container flex-container even-container">
+        <div class="green-section border"></div>
+      </div>
+    </div>
 
 
   </main>
