--- a/index.html
+++ b/index.html
@@ -66,13 +66,31 @@
         <div class="green-section border"></div>
       </div>
     </div>
-
-
   </main>
 
    <!-- FOOTER -->
-  <footer>
-  </footer>
+<footer>
+
+<div class="darkgrey-container solid-border container flex-container even-container">
+  <section class="aquamarine-section white-border"></section>
+  <section class="aquamarine-section white-border"></section>
+  <section class="aquamarine-section white-border"></section>
+  <section class="aquamarine-section white-border"></section>
+  <div class="container darkpink-section border"></div>
+</div>
+
+<div class="darkgrey-container">
+  <div class="darkgrey-container flex-container container footerbar">
+    <div class="login-button">
+      <button class="border">Login</button>
+    </div>
+    <div class="bottone-button">
+      <button class="border">Bottone</button>
+    </div>
+</div>    
+  </div>
+
+</footer>
 
 </body>
 </html>
