aggiunte modifiche bordi

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </div>
     <div class="row footer-bottom">
       <div>Logo</div>
-      <div>Bottone</div>
+      <button>Login</button>
     </div>
   </div>
 </footer>
